calico/allow-ips-alb1-template.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-ips-to-alb1
spec:
  applyOnForward: true
  preDNAT: true
  ingress:
  - action: Allow
    destination:
      nets:
      - NLB_OR_ALB_IP_CIDR
      ports:
      - 80
      - 443
    protocol: TCP
    source:
      nets:
      - CLIENT_RANGE_1
      - CLIENT_RANGE_2
      - CLIENT_RANGE_3
      - CLIENT_RANGE_4
      - CLIENT_RANGE_5
      - CLIENT_RANGE_6
      - CLIENT_RANGE_7
      - CLIENT_RANGE_8
  selector: ibm.role=='worker_public'
  order: 500
  types:
  - Ingress
