calico/deny-lb-ports.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: deny-lb-public-ports
spec:
  applyOnForward: true
  preDNAT: true
  ingress:
  - action: Deny
    destination:
      nets:
      - NLB_OR_ALB_IP # example 192.168.254.254
      ports:
      - 80
      - 443
    protocol: TCP
    source: {}
  - action: Deny
    destination:
      nets:
      - NLB_OR_ALB_IP_CIDR # example 192.168.254.254
      ports:
      - 80
      - 443
    protocol: UDP
    source: {}
  selector: ibm.role=='worker_public'
  order: 800
  types:
  - Ingress
